--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     })
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
+    compile "org.jetbrains.anko:anko-commons:$anko_version"
+
     // RXJava
     compile 'io.reactivex:rxjava:1.2.5'
     // RXAndroid para termos acesso a main thread do Android
@@ -45,4 +47,5 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     // Interceptor para visualizar os logs das requisições do Retrofit
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
