--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     })
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
+    //Anko Commons
     compile "org.jetbrains.anko:anko-commons:$anko_version"
 
     // RXJava
